k8s/manifests-8a63f7/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-8a63f7
  namespace: journee
  labels:
    app: journee-8a63f7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-8a63f7
  template:
    metadata:
      labels:
        app: journee-8a63f7
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-8a63f7
          image: gcr.io/my-docker-471807/journee:8a63f7-5e6370
          ports:
            - containerPort: 3000
