k8s/manifests-8a63f7/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-8a63f7
  namespace: journee
spec:
  selector:
    app: journee-8a63f7
  ports:
    - port: 80
      targetPort: 3000
